--- a/Resources/public/css/smileform_section.css
+++ b/Resources/public/css/smileform_section.css
@@ -1,4 +1,5 @@
-.smileform-section {
+.smileform-section label {
+    cursor: default;
     background: #2B84B1;
     color: #fff;
     border-radius: .25rem .25rem 0 0;
@@ -7,6 +8,5 @@
     display: flex;
     height: 3rem;
     line-height: 2.5rem;
-    cursor: pointer;
     margin: .25rem 0;
 }
